# rpocket

./: .pre-commit-config.yaml  Cargo.toml  README.md
examples/: simple.rs
src/: error.rs  lib.rs  rpocket.rs
src/model/: mod.rs
src/service/: admin.rs  auth_state.rs  collection.rs  crud.rs  health.rs  http.rs  log.rs  mod.rs  record.rs  setting.rs
src/store/: auth_storage.rs  mod.rs
