[package]
name = "rpocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.14", features = ["json"] }
url = "2.3.1"
async-trait = "0.1.67"
tower-service = "0.3.2"
futures = "0.3.27"
tower = { version="0.4.13", features=["util"]}

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros"] }
mockito = "1.0"
rpocket = { path = ".", features = ["multipart"] }

[features]
default = []
multipart = ["reqwest/multipart"]

[[example]]
name = "simple"
